--- a/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/Views/Shared/_Layout.cshtml
+++ b/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Booking", "Index", "Booking")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Admin", "Index", "Admins")</li>
                 </ul>
             </div>
         </div>
