--- a/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/Views/Shared/_Layout.cshtml
+++ b/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/Views/Shared/_Layout.cshtml
@@ -22,11 +22,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Tour", "Index", "Tour")</li>
-                    <li>@Html.ActionLink("Booking", "Index", "Booking")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Admin", "Index", "Admins")</li>
+                    <li>@Html.ActionLink("Profile", "Index", "CandidateProfiles")</li>
                 </ul>
             </div>
         </div>
