--- a/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/Content/Site.css
+++ b/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/Content/Site.css
@@ -1,11 +1,11 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-    font-family: 'Segoe UI';
+    font-family: Georgia,"Times New Roman",Times,serif;
 }
 
-h1, h2 {
-    font-family:'Agency FB';
+h1 {
+    font-family: Georgia,"Times New Roman",Times,serif;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -54,4 +54,3 @@ input[type="checkbox"].input-validation-error {
 .validation-summary-valid {
     display: none;
 }
-
