--- a/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/Content/bootstrap.css
+++ b/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/Content/bootstrap.css
@@ -74,6 +74,9 @@ h1 {
   margin: 0.67em 0;
   font-size: 2em;
 }
+h3{
+    color:red;
+}
 
 abbr[title] {
   border-bottom: 1px dotted;
@@ -315,7 +318,7 @@ body {
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
-  background-color: #3C6392;
+  background-color: #ffffff;
 }
 
 input,
@@ -3348,7 +3351,7 @@ input[type="button"].btn-block {
   top: auto;
   bottom: 100%;
   margin-bottom: 1px;
-}
+}bar
 
 @media (min-width: 768px) {
   .navbar-right .dropdown-menu {
@@ -4195,6 +4198,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   float: left;
   padding: 15px 15px;
   font-size: 18px;
+  font-family: "Franklin Gothic Medium", "Franklin Gothic", "ITC Franklin Gothic", Arial, sans-serif;
   line-height: 20px;
 }
 
@@ -4501,31 +4505,31 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse {
-  background-color: #222222;
+  background-color: #a31616;
   border-color: #080808;
 }
 
 .navbar-inverse .navbar-brand {
-  color: #999999;
+  color: #ffffff;
 }
 
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
-  color: #ffffff;
+  color: #000000;
   background-color: transparent;
 }
 
 .navbar-inverse .navbar-text {
-  color: #999999;
+  color: #ffffff;
 }
 
 .navbar-inverse .navbar-nav > li > a {
-  color: #999999;
+  color: #ffffff;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #ffffff;
+  color: #000000;
   background-color: transparent;
 }
 
