--- a/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/Views/CandidateProfiles/Index.cshtml
+++ b/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/Views/CandidateProfiles/Index.cshtml
@@ -6,9 +6,6 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -57,10 +54,10 @@
        
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.CandidateID }) | 
-            @Html.ActionLink("Details", "Details", new { id=item.CandidateID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CandidateID })
+            @Html.ActionLink("Details", "Details", new { id=item.CandidateID }) 
         </td>
     </tr>
 }
+
 
 </table>
