--- a/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/Views/Home/Index.cshtml
+++ b/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/Views/Home/Index.cshtml
@@ -2,15 +2,10 @@
     ViewBag.Title = "Home Page";
 }
 
-<h1>Something for everyone</h1>
+<h1>Student Management Committee Election</h1>
 
-<p><img src="~/Content/images/CaliforniaState.jpg" style="float: right; padding: 0em 0 5em 1em;" />
-    What type of California experience do you want to have? 
-    Are you looking for an exciting adventure? A chance to relax and get away from it all? Or maybe you're looking for a chance to do something entirely new and enriching! As you can see, we've got you covered. We offer tours that are as diverse as California itself! Select any of our tours learn more about pricing and available options.
-</p>
 <p>
-    If you want to refine your search a bit, feel free to browse tours by region or activity. You can even check out our cool interactive Tour Finder to help you choose the tour that will give you the best tour experience based on your specific preferences. If you have any questions about any of our tours, feel free to contact us, or check out our handy FAQ for a quick overview of our services.
-</p>
-<p>    
-    Our tour packages are as diverse as California itself and are designed to let you experience our beautiful state in a whole new way. Whether you want to take guided tours through stunning wine country, or set your own agenda as you bike along miles of breathtaking Pacific coastline, we have something for everyone. Come explore.
+    What type of committee is your kind of committee? <img src="~/Content/images/voting.png" style="float: right; padding: 1em 0 1em 1em;" />
+    Calling all students!Yearly, committees come and go, but their contributions lasts.Have you thought about  who to vote for?
+    we welcome you to this webiste where you browse the profiles of the candidiates and who to vote for!
 </p>
