--- a/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/Views/Shared/_Layout.cshtml
+++ b/ICT2016-W4-LAB-Explore-California-Start/ExploreCalifornia/Views/Shared/_Layout.cshtml
@@ -17,30 +17,29 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Explore California", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("SMC Elections", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Profile", "Index", "CandidateProfiles")</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "navbar-brand" })</li>
+                  
+                    <li>@Html.ActionLink("Candidate Profiles", "Index", "CandidateProfiles", null, new { @class = "navbar-brand" })</li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="container body-content">
         <div class="row">
-            <div class="col-md-2 sidebar">                
-                <img src="/Content/images/logo.gif" />                
+            <div class="col-md-2 sidebar">
+                <img src="~/Content/images/logo.png" />
             </div>
             <div class="col-md-10">
                 @RenderBody()
             </div>
-        </div>        
+        </div>
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Explore California</p>
+            <p>&copy; @DateTime.Now.Year - SMC Election</p>
         </footer>
     </div>
 
