--- a/ProjectElection/ExploreCalifornia/Views/Shared/_Layout.cshtml
+++ b/ProjectElection/ExploreCalifornia/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                     @if (@TempData["ResultMessage"]== "True")
                     {
                         <li>@Html.ActionLink("Candidate Profiles", "Index", "CandidateProfiles", null, new { @class = "navbar-brand" })</li>
+                        <li>@Html.ActionLink("Rallies", "Index", "Rallies", null, new { @class = "navbar-brand" })</li>
                     }
 
 
