--- a/ProjectElection/ExploreCalifornia/Views/Rallies/Index.cshtml
+++ b/ProjectElection/ExploreCalifornia/Views/Rallies/Index.cshtml
@@ -1,7 +1,29 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Rallies' Index";
 }
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            @Html.ActionLink("SMC Elections", "Index", "Home", null, new { @class = "navbar-brand" })
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "navbar-brand" })</li>
+                <li>@Html.ActionLink("Candidate Profiles", "Index", "CandidateProfiles", null, new { @class = "navbar-brand" })</li>
+                <li>@Html.ActionLink("Rallies", "Index", "Rallies", null, new { @class = "navbar-brand" })</li>
 
-<h2>Index</h2>
+
+
+            </ul>
+        </div>
+    </div>
+</div>
+
+<h2> Rallies' Index</h2>
 
