--- a/ProjectElection/ExploreCalifornia/Views/Shared/_Layout.cshtml
+++ b/ProjectElection/ExploreCalifornia/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 
                     @if (@TempData["NoMoreLogin"] != "NoMore")
                     {
-                    <li>@Html.ActionLink("LOGIN", "Login", "Voters", null, new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("Login", "Login", "Voters", null, new { @class = "navbar-brand" })</li>
                     }
 
 
@@ -34,7 +34,7 @@
                     @if (@TempData["ResultMessage"]== "True")
                     {
                         <li>@Html.ActionLink("Candidate Profiles", "Index", "CandidateProfiles", null, new { @class = "navbar-brand" })</li>
-                        <li>@Html.ActionLink("Rallies", "Index", "Rallies", null, new { @class = "navbar-brand" })</li>
+                        <li>@Html.ActionLink("Logout", "Index", "Home", null, new { @class = "navbar-brand" })</li>
                     }
 
 
