with bigger textarea
bigger textarea given for introduction

--- a/ProjectElection/ExploreCalifornia/Views/CandidateProfiles/Edit.cshtml
+++ b/ProjectElection/ExploreCalifornia/Views/CandidateProfiles/Edit.cshtml
@@ -51,7 +51,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Introduction, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Introduction)
+               @Html.TextAreaFor(model => model.Introduction, new { rows = 10, cols = 50 })
                 @Html.ValidationMessageFor(model => model.Introduction)
             </div>
         </div>
