Login feature follows architecture

--- a/Team11_2106Project/Views/Shared/_Layout.cshtml
+++ b/Team11_2106Project/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 
                     @if (@TempData["NoMoreLogin"] != "NoMore")
                     {
-                    <li>@Html.ActionLink("Login", "Login", "Voters", null, new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("Login", "Login", "Home", null, new { @class = "navbar-brand" })</li>
                     }
 
 
