--- a/Team11_2106Project/Views/Shared/_Layout.cshtml
+++ b/Team11_2106Project/Views/Shared/_Layout.cshtml
@@ -1,65 +1,27 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <!--3HERE-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title</title>
+    <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    <link href="@Url.Content("~/Content/navbar.css")" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("SMC Elections", "Index", "Home", null, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "navbar-brand" })</li>
-
-
-                    @if (@TempData["NoMoreLogin"] != "NoMore")
-                    {
-                    <li>@Html.ActionLink("Login", "Login", "Home", null, new { @class = "navbar-brand" })</li>
-                    }
-
-
-
-                    @if (@TempData["ResultMessage"]== "True")
-                    {
-                        <li>@Html.ActionLink("Candidate Profiles", "Index", "CandidateProfiles", null, new { @class = "navbar-brand" })</li>
-                        <li>@Html.ActionLink("Logout", "Index", "Home", null, new { @class = "navbar-brand" })</li>
-                    }
-
-
-
-                </ul>
-            </div>
-        </div>
-    </div>
+    @Html.Action("Navbar", "Navbar")
+    <br />
     <div class="container body-content">
-        <div class="row">
-            <div class="col-md-2 sidebar">
-                <img src="~/Content/images/logo.png" />
-            </div>
-            <div class="col-md-10">
-                @RenderBody()
-            </div>
-        </div>
+        @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - SMC Election</p>
+            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script src="@Url.Content("~/Scripts/navbar.js")"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
