--- a/Team11_2106Project/Views/Home/Voter.cshtml
+++ b/Team11_2106Project/Views/Home/Voter.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Team11_2106Project.ViewModel.LoginViewModel
 
 @{
-    ViewBag.Title = "Admin";
+    ViewBag.Title = "Voter";
 }
 
 <!--5-->
@@ -14,16 +14,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Admin</a>
+            <a class="navbar-brand" href="#">Voter</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
 
                 <li class="active">@Html.ActionLink("Home", "Index", new { controller = "Home" })
-                <li>@Html.ActionLink("Stats", "Index", "Home")</li>
-                <li>@Html.ActionLink("Profile", "Index", "Home")</li>
                 <li>@Html.ActionLink("Rally", "Index", "Home")</li>
-
 
 
             </ul>
