--- a/Team11_2106Project/Views/Shared/_Navbar.cshtml
+++ b/Team11_2106Project/Views/Shared/_Navbar.cshtml
@@ -10,15 +10,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">NavBar</a>
+            <a class="navbar-brand" href="#">Candidate</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
 
                <li class="active">@Html.ActionLink("Home", "Index", new { controller = "Home" })
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("Vote", "VoteControl", "Vote")</li>
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                <li>@Html.ActionLink("Profile", "VoteControl", "Vote")</li>
+                <li>@Html.ActionLink("Rally", "Index", "Home")</li>
+            
 
                  
             </ul>
