May we finish it soon LOL
-navbar linking issues(Voter and candidate profiles)

--- a/Team11_2106Project/Views/CandidateProfiles/Details.cshtml
+++ b/Team11_2106Project/Views/CandidateProfiles/Details.cshtml
@@ -1,9 +1,9 @@
-﻿@model Team11_2106Project.Models.CandidateProfile
+﻿@model Team11_2106Project.ViewModel.CandidateProfileViewModel
 
 @{
     ViewBag.Title = "Details";
 }
-<h2>Details</h2>
+<h2>Details</h2>`
 
 <div>
     <h4>CandidateProfile</h4>
@@ -17,21 +17,6 @@
             @Html.DisplayFor(model => model.StudentYear)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdatedTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UpdatedTime)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PositionApplied)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PositionApplied)
-        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Introduction)
