--- a/Team11_2106Project/Views/CandidateProfiles/Index.cshtml
+++ b/Team11_2106Project/Views/CandidateProfiles/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Team11_2106Project.Models.CandidateProfile>
+﻿@model IEnumerable<Team11_2106Project.ViewModel.CandidateProfileViewModel>
 
 @{
     ViewBag.Title = "Index";
@@ -8,6 +8,7 @@
 
 <table class="table">
     <tr>
+
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
@@ -15,49 +16,40 @@
             @Html.DisplayNameFor(model => model.StudentYear)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UpdatedTime)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PositionApplied)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Introduction)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.CCA)
         </th>
-    
+
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StudentYear)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UpdatedTime)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PositionApplied)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Introduction)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CCA)
-        </td>
-    
-       
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CandidateID }) | 
-            @Html.ActionLink("Details", "Details", new { id=item.CandidateID }) 
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StudentYear)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Introduction)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CCA)
+            </td>
+
+
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.CandidateID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.CandidateID });
+                @*//TODO LINK TO vote to VOTER*@
+
+            </td>
+        </tr>
+    }
 
 
 </table>
