--- a/Team11_2106Project/Views/Home/Admin.cshtml
+++ b/Team11_2106Project/Views/Home/Admin.cshtml
@@ -23,6 +23,8 @@
                 <li>@Html.ActionLink("Stats", "Index", "Home")</li>
                 <li>@Html.ActionLink("Profile", "Index", "Home")</li>
                 <li>@Html.ActionLink("Rally", "Index", "Home")</li>
+                @*TODO FIND A WAY TO LINK CANDIDATE PROFILE PAGE*@
+                <li>@Html.ActionLink("Candidate Profile", "Index", "CandidateProfiles")</li>
 
 
 
