Changed gender to StudentRole

--- a/Team11_2106Project/Views/Account/Login.cshtml
+++ b/Team11_2106Project/Views/Account/Login.cshtml
@@ -43,8 +43,8 @@
                             </div>
                             <!--i have changed here -->
                             <div>
-                            @Html.DropDownListFor(m => m.StudentGender,
-                            new SelectList(Enum.GetValues(typeof(Gender))),
+                            @Html.DropDownListFor(m => m.StudentRole,
+                            new SelectList(Enum.GetValues(typeof(StudentRole))),
                                     "Select Gender")
 
 
