integrated with rallies and candidate profiles

--- a/Team11_2106Project/Views/Home/Admin.cshtml
+++ b/Team11_2106Project/Views/Home/Admin.cshtml
@@ -21,8 +21,7 @@
 
                 <li class="active">@Html.ActionLink("Home", "Index", new { controller = "Home" })
                 <li>@Html.ActionLink("Stats", "Index", "Home")</li>
-                <li>@Html.ActionLink("Profile", "Index", "Home")</li>
-                <li>@Html.ActionLink("Rally", "Index", "Home")</li>
+                <li>@Html.ActionLink("Rally", "Index", "RalliesViewModels")</li>
                 @*TODO FIND A WAY TO LINK CANDIDATE PROFILE PAGE*@
                 <li>@Html.ActionLink("Candidate Profile", "Index", "CandidateProfiles")</li>
 
