--- a/Team11_2106Project/Views/Shared/_Navbar.cshtml
+++ b/Team11_2106Project/Views/Shared/_Navbar.cshtml
@@ -13,14 +13,35 @@
             <a class="navbar-brand" href="#">Candidate</a>
         </div>
         <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
+            @if (TempData.ContainsKey("StudentRole"))
+            {
+                var studentRole = TempData["StudentRole"].ToString();
 
-               <li class="active">@Html.ActionLink("Home", "Index", new { controller = "Home" })
-                <li>@Html.ActionLink("Profile", "VoteControl", "Vote")</li>
-                <li>@Html.ActionLink("Rally", "Index", "Home")</li>
+                if (studentRole.Equals("Candidate"))
+                {
+                    <ul class="nav navbar-nav">
+                        @*<li class="active">@Html.ActionLink("Home", "Index", new { controller = "Home" })
+                    <li>@Html.ActionLink("Profile", "VoteControl", "Vote")</li>
+                    <li>@Html.ActionLink("Rally", "Index", "Home")</li>*@
+                        <li>SUCK THAT BITCHES! CANDIDATE!!!</li>
+                    </ul>
+                }
+                else if (studentRole.Equals("Voter"))
+                {
+                    <ul class="nav navbar-nav">
+                        <li>SUCK THAT BITCHES! VOTER!!!</li>
+                    </ul>
+                }
+                else if (studentRole.Equals("Admin"))
+                {
+                    <ul class="nav navbar-nav">
+                        <li>SUCK THAT BITCHES! ADMIN!!!</li>
+                    </ul>
+                }
+                TempData["StudentRole"] = studentRole;
+            }
 
-                 
-            </ul>
+
             @Html.Partial("_LoginPartial")
         </div><!--/.nav-collapse -->
     </div>
