Candidate can only edit and delete their own rallies. IMPLEMENTED

--- a/Team11_2106Project/Views/CandidateProfiles/Details.cshtml
+++ b/Team11_2106Project/Views/CandidateProfiles/Details.cshtml
@@ -41,6 +41,7 @@
 
 
 
+    @* Only admin can go back to se eall the candidate profiles *@
     @if (TempData.ContainsKey("AdminID"))
     {
         var adminID = TempData["AdminID"].ToString();
