--- a/Team11_2106Project/Views/Rallies/Edit.cshtml
+++ b/Team11_2106Project/Views/Rallies/Edit.cshtml
@@ -17,6 +17,14 @@
         @Html.HiddenFor(model => model.RalliesID)
 
         <div class="form-group">
+            @Html.LabelFor(model => model.CandidateID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.CandidateID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CandidateID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.CandidateName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CandidateName, new { htmlAttributes = new { @class = "form-control" } })
