Ensured UI flow is accurate for each student role

--- a/Team11_2106Project/Views/CandidateProfiles/Edit.cshtml
+++ b/Team11_2106Project/Views/CandidateProfiles/Edit.cshtml
@@ -58,6 +58,7 @@
     </div>
 }
 
+@* Only Admins are able to return and view all profiles *@
 @if (TempData.ContainsKey("AdminID"))
 {
     var adminID = TempData["AdminID"].ToString();
